# npa-vee-zephyr

./: .gitignore  CMakeLists.txt  Kconfig  README.md  SCR-nxpvee-zephyr.txt  nxpvee.yaml  prj.conf  prj_ai.conf  prj_systemview.conf  west.yml
Licenses/: SEGGER_LICENSE
boards/: frdm_k64f.conf  frdm_mcxn947_mcxn947_cpu0.conf  frdm_mcxn947_mcxn947_cpu0_ai.conf  imx8mp_evk_mimx8ml8_m7.conf  mimxrt1060_evkb.conf  mimxrt1064_evk_ai.conf  mimxrt1170_evk_mimxrt1176_cm7.conf  mimxrt595_evk_mimxrt595s_cm33.conf
bsp/: CMakeLists.txt
bsp/microej/ai/: nxpvee_ai.cmake
bsp/microej/ai/inc/: TfLiteSupportImpl.h
bsp/microej/core/: microej_core.cmake
bsp/microej/core/src/: LLBSP_NXP.c  LLMJVM_ZephyrOS.c  microej_main.c  microej_time.c
bsp/microej/ui/: microej_ui.cmake
bsp/microej/ui/inc/: microui_event_decoder_conf.h
bsp/microej/ui/src/: LLUI_DISPLAY.c  LLUI_INPUT.c  touch_manager.c
bsp/src/: main.c  shell.c  simple_gfx_app_imp.c
microej/: CMakeLists.txt
microej/apps/AiSample/: .project  module.ivy
microej/apps/AiSample/launchers/: AiSample-EMB-CM33.launch  AiSample-EMB-CM7.launch  AiSample-SIM-CM33.launch  AiSample-SIM-CM7.launch
microej/apps/AiSample/src/main/java/com/nxp/aiSample/: AiMain.java
microej/apps/HelloWorld/: .project  module.ivy
microej/apps/HelloWorld/launchers/: HelloWorld-EMB-CM33.launch  HelloWorld-EMB-CM4.launch  HelloWorld-EMB-CM7.launch  HelloWorld-SIM-CM33.launch  HelloWorld-SIM-CM4.launch  HelloWorld-SIM-CM7.launch
microej/apps/HelloWorld/src/main/java/com/nxp/HelloWorld/: HelloWorld.java
microej/apps/SimpleGFX/: .classpath  .project  module.ivy
microej/apps/SimpleGFX/launchers/: SimpleGFX-EMB-CM33.launch  SimpleGFX-EMB-CM7.launch  SimpleGFX-SIM-CM33.launch  SimpleGFX-SIM-CM7.launch
microej/apps/SimpleGFX/src/main/java/com/nxp/simpleGFX/: SimpleGFXWidget.java
microej/front-panel/: .project  module.ivy
microej/front-panel/src/main/resources/front-panels/: g1120b0mipi.fp  lcd_par_s035_8080.fp  rk043fn66hs_ctg.fp  rk055hdmipi4ma0.fp
microej/mock/: .project  module.ivy
microej/plats/CM4hardfp_GCC48/: .project
microej/plats/CM7hardfp_GCC48/: .project
microej/scripts/: build.bat  build.sh  run.bat  run.sh
microej/validation/: CMakeLists.txt  Makefile
microej/validation/core/java-testsuite-runner-core/: config.properties
microej/validation/fs/java-testsuite-runner-fs/: config.properties
microej/validation/net/java-testsuite-runner-net/: config.properties
microej/validation/security/java-testsuite-runner-security/: config.properties
microej/validation/ssl/java-testsuite-runner-ssl/: config.properties
microej/validation/ui/ui3/java-testsuite-runner-ui3/: README.rst  config.properties  module.ivy
microej/validation/vg/java-testsuite-runner-vg/: config.properties  module.ivy
microej/vee-port-configuration/: .project  module.ivy
microej/vee-port-configuration/arch/: CM33.platform  CM4.platform  CM7.platform  module.properties.CM33  module.properties.CM7
microej/vee-port-configuration/bsp/: bsp.properties
microej/vee-port-configuration/dropins/scripts/init-ai-mock/: init.xml
microej/vee-port-configuration/dropins/scripts/init-gpio-impl/: init-gpio-impl.xml
microej/vee-port-configuration/dropins/scripts/init-gpio-mock/: init.xml
microej/vee-port-configuration/dropins/scripts/init-gpio-properties-mcxn947/: gpio-properties-mcxn947.xml  gpio.properties
microej/vee-port-configuration/dropins/scripts/init-partial-buffer/: partial-buffer-init.xml.OFF  partial-buffer-init.xml.ON
